--- a/index.html
+++ b/index.html
@@ -2,44 +2,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Build For Good Bot</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f4f8;
-            color: #333;
-            text-align: center;
-            padding: 50px;
-        }
-        h1 {
-            color: #ff0420;
-        }
-        .button {
-            display: block;
-            width: 300px;
-            margin: 10px auto;
-            padding: 15px;
-            background-color: #ff0420;
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-            font-size: 18px;
-            transition: background-color 0.3s ease;
-        }
-        .button:hover {
-            background-color: #cc031a;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>BuildForGood Bot by Stephan1516417</title>
+  <style>
+    body {
+      background-color: #fff6f0;
+      font-family: 'Segoe UI', sans-serif;
+      color: #202020;
+      text-align: center;
+      padding: 2rem;
+    }
+    h1 {
+      color: #ff0420;
+      font-size: 2.4rem;
+      margin-bottom: 0.5rem;
+    }
+    p {
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
+    }
+    .button-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+    }
+    a.button {
+      display: inline-block;
+      background-color: #ff0420;
+      color: white;
+      text-decoration: none;
+      padding: 0.75rem 1.5rem;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: background 0.2s ease-in-out;
+    }
+    a.button:hover {
+      background-color: #cc001b;
+    }
+    footer {
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      color: #888;
+    }
+  </style>
 </head>
 <body>
-    <h1>🚀 Build For Good: Optimism Links</h1>
-    <a class="button" href="https://opensea.io/collection/build-for-good-op-cards" target="_blank">🎴 OP Cards Collection</a>
-    <a class="button" href="https://opensea.io/collection/build-for-good-the-coloring-way" target="_blank">🎨 Coloring Book NFT</a>
-    <a class="button" href="https://opensea.io/collection/op-avatars-identity-for-good" target="_blank">🧑‍🎤 OP Avatars</a>
-    <a class="button" href="https://medium.com/me/stories/public" target="_blank">📰 Read Articles</a>
-    <a class="button" href="https://github.com/stephanschwab/build-for-good/blob/main/BUILD_FOR_GOOD_The_Optimism_Way.pdf" target="_blank">📘 Read Book PDF</a>
-    <a class="button" href="https://www.optimism.io/retropgf" target="_blank">💡 What is RetroPGF?</a>
+  <h1>BuildForGood Bot 🤖</h1>
+  <p>A solo builder creating public goods for the Optimism Collective.</p>
+
+  <div class="button-container">
+    <a class="button" href="https://github.com/stephanschwab/build-for-good" target="_blank">📘 Illustrated Book (PDF)</a>
+    <a class="button" href="https://github.com/stephanschwab/build-for-good-global-book-texts" target="_blank">📚 Global Book Texts (10 Languages)</a>
+    <a class="button" href="https://opensea.io/collection/build-for-good-op-cards" target="_blank">🖼️ OP Cards</a>
+    <a class="button" href="https://opensea.io/collection/op-avatars-identity-for-good" target="_blank">🧠 OP Avatars</a>
+    <a class="button" href="https://opensea.io/collection/build-for-good-the-coloring-way" target="_blank">🎨 BUILD FOR GOOD: The Coloring Way (NFT)</a>
+    <a class="button" href="https://manifold.xyz/@stephan1516417/id/4185753840" target="_blank">📕 Comic (Manifold)</a>
+    <a class="button" href="https://opensea.io/collection/meme-saves-the-day" target="_blank">📖 Comic NFTs</a>
+    <a class="button" href="https://app.aragon.org/dao/optimism-mainnet/0x80b65555D91430c4A24E6b36b139A2a7DE8D112c/proposals/TV-1" target="_blank">🗳️ DAO Vote</a>
+    <a class="button" href="https://medium.com/@stephanschwab" target="_blank">📰 Medium</a>
+    <a class="button" href="https://mirror.xyz/0x18379c82d86D15800D810e5002E031168285358d" target="_blank">🪞 Mirror</a>
+    <a class="button" href="https://farcaster.xyz/stephan1516417" target="_blank">🌍 Farcaster</a>
+    <a class="button" href="https://x.com/stephan1516417" target="_blank">🐦 Twitter</a>
+  </div>
+
+  <footer>
+    Made with ❤️ for Optimism · stephan1516417 · 2025
+  </footer>
 </body>
 </html>
